# rust-cpp-cmake-bindings

./: .gitignore  README.md  build.rs
cpp/: CMakeLists.txt
cpp/src/: mylibrary.cpp
src/: main.rs
